--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* SASS Mixins, Variables ect. */
+$light-gray: #777;
+$gray-medium-light: #eaeaea;
 /* universal */
 
 html {
@@ -24,12 +27,10 @@ textarea {
 
 .center {
   text-align: center;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
-
-.center h1 {
-  margin-bottom: 10px;
-}
-
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -49,7 +50,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $light-gray;
 }
 
 p {
@@ -68,9 +69,33 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  &:hover {
+    color: $light-gray;
+    text-decoration: none;
+  }
 }
+/* footer */
 
-#logo:hover {
-  color: #777;
-  text-decoration: none;
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $gray-medium-light;
+  color: $gray-light; /* NOTE: not $light-gray! Comes from bootstrap-sass gem */
+  a {
+    color: #555;
+    &:hover {
+      color: #222;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
